# CompassMasteringCompressor

./: .gitignore  .rgignore  CMakeLists.txt  CMakeLists.txt.bak_20260110-153628_vst3_guard  CMakeLists.txt.bak_20260110-153729_rm_splash_define  CMakeLists.txt.bak_20260111-153952_auto_vst3_link  CMakeLists.txt.bak_20260111-154153_fix_symlink_rm  CompassMasteringLimiter_FULL_DUMP.txt  CompassMasteringLimiter_FULL_DUMP_WITH_BUILD_FILES.txt  CompassMasteringLimiter_SOURCE_ONLY_20260112-211759.txt
Dumps/: CompassMasteringLimiter_FULL_SOURCE_DUMP.txt
Source/Plugin/: PluginEditor.cpp  PluginEditor.cpp.bak_20260110-154319_onscreen_fix  PluginEditor.cpp.bak_20260110-171718_fixed_size_ui  PluginEditor.cpp.bak_20260110-171927_remove_skeleton_text  PluginEditor.cpp.bak_20260117-113347_truthgrid_rows  PluginEditor.cpp.bak_20260124-000000_grMeterVisible  PluginEditor.cpp.bak_20260124-181847_phase3_delete_grey_bar  PluginEditor.cpp.bak_20260125-082011_stereolink_size_color_matte  PluginEditor.h  PluginEditor.h.bak_20260110-153504_include_fix  PluginEditor.h.bak_20260124-000000_grMeterAlphaLift  PluginProcessor.cpp  PluginProcessor.cpp.bak_20260110-162614_gate2_apvts_layout  PluginProcessor.cpp.bak_20260110-162748_gate2_smoothing_readonce  PluginProcessor.cpp.bak_20260110-165357_gate3_state_model_impl  (+37 more)
build_reference/: CMakeCache.txt  Makefile  cmake_install.cmake
reference_core/: CMakeLists.txt  GOLDEN_SPEC_INDEX.md  RUNTIME_CONDITIONS_LOCK.md
reference_harness/: CMakeLists.txt
reference_tests/: CMakeLists.txt.bak_20260124-094724_test_harness_link  CMakeLists.txt.bak_20260124-095038_rm_slash_labels  CMakeLists.txt.bak_20260124-095158_juce_link_and_includes  CMakeLists.txt.bak_20260124-095235_link_plugin_target
(+47 files in other folders)
